# nestupid

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Info.plist  README.md  nestupid.icns
docs/: apu-design.md  architecture.md  cpu-design.md  handoff.md  input-design.md  mapper-design.md  ppu-design.md  roadmap.md  rom-format.md  task.md  testing-strategy.md  walkthrough.md
docs/archive/: 2026-01-12-audio-apu.md
docs/plans/: advanced_features_vision.md  mapper2_implementation.md
scripts/: run_all_tests.sh  test_public_roms.sh
src/: apu.c  cpu.c  cpu.h  gui.c  gui.h  gui_mac.m  input.c  input.h  input_config.h  main.c  mapper.h  memory.c  platform_mac.h  ppu.c  ppu.h  rom.c  rom.h  system.h
src/apu/: apu.c  apu.h
src/cpu/: cpu.c  cpu.h
src/gui/: gui.c  gui.h
src/input/: input_config.c  key_mapping_mac.c
src/memory/: memory.c  memory.h
src/ppu/: ppu.c  ppu.h
src/rom/: mapper.c  mapper.h  rom.h
tests/: test_apu_basic.c
tests/lldb/: test_cpu_exec.py  test_ppu_loop.py  test_ppu_regs.py  test_ppu_sprites.py  test_rom_loading.py
